@@ -1,5 +1,5 @@
-#   Time-stamp: <2001-12-21 09:27:06 drew> 
-#   $Id: TODO,v 1.21 2001/12/20 17:38:13 drew_csillag Exp $
+#   Time-stamp: <02/01/02 01:36:16 smulloni> 
+#   $Id: TODO,v 1.22 2001/12/21 14:28:06 drew_csillag Exp $
 
 
 * - TODO
@@ -23,19 +23,26 @@ Do Quick release
 
 SkunkWeb 3.2
 ------------------------------
-X pluggable file retrieval system for AE (would have to rework pars)
+! pluggable file retrieval system for AE (would have to rework pars)
+  parfile should use relative paths, like zip; parfs should work.
+
 X CGI adaptor (in place of mod_skunkweb, etc.)
 X! configure refinements (js) 
+X vfs: path translation for archive files 
 X fix any references to DateTime to mx.DateTime (or handle both)
 X update PyDO docs for sapdb
-! vfs: path translation for archive files 
 ! update MySQL driver
+* fix any references to DateTime to mx.DateTime (or handle both)
+X vfs: make mounts show up in directory listings for MultiFS;
+  make archive fses in which archives contain only a fragment of 
+  a filesystem still work
 
 
 SkunkWeb 3.3
 ------------------------------
 * DAV support built on httpd;
 * sapdb service, package and caching connection from PyDO
+
 
 Future stuff
 ------------------------------
