@@ -1,5 +1,5 @@
 # $Id$
-# Time-stamp: <01/09/23 10:55:54 smulloni>
+# Time-stamp: <01/12/18 16:30:26 smulloni>
 
 ########################################################################
 #  
@@ -22,6 +22,6 @@
 
 from rosio import RO_StringIO
 from vfs import MST_SIZE, MST_ATIME, MST_MTIME, MST_CTIME, \
-     VFSException, FS, LocalFS, PathPropertyStore
+     VFSException, FS, LocalFS, PathPropertyStore, MultiFS
 from zipfs import ZipFS
 from parfs import ParFS
