@@ -1,5 +1,5 @@
 # $Id$
-# Time-stamp: <01/09/22 18:16:10 smulloni>
+# Time-stamp: <01/12/31 13:02:50 smulloni>
 
 ######################################################################## 
 #  Copyright (C) 2001 Jocob Smullyan <smulloni@smullyan.org>
@@ -23,52 +23,77 @@ import zipfile
 from vfs import FS, VFSException
 from rosio import RO_StringIO
 import time
+import os
+import re
+import pathutil
 
 class ZipFS(FS):
     
-    def __init__(self, zippath, mode='r'):
+    def __init__(self, zippath, prefix='/'):
         if not zipfile.is_zipfile(zippath):
             raise zipfile.BadZipfile, "not a zip file: %s" % zippath
-        self.zpath=zippath
-        self.__zfile=zipfile.ZipFile(zippath, mode=mode)
+        self.zpath=os.path.abspath(zippath)
+        self.__zfile=zipfile.ZipFile(zippath, mode='r')
+        self.__archive=pathutil.Archive(prefix)
+        self.prefix=prefix
+        self.__archive.savePaths(self.__zfile.namelist())
 
     def ministat(self, path):
-        info=self.__zfile.getinfo(path)
-        modtime=time.asctime(info.date_time + (0, 0, 0))
+        adjusted=pathutil._adjust_user_path(path)
+        if not self.__archive.paths.has_key(adjusted): 
+            raise VFSException, "no such file or directory: %s" % path
+        realname=self.__archive.paths[adjusted]
+        if realname==None:
+            arcstat=os.stat(self.zpath)[7:]
+            return (0,) + arcstat
+        info=self.__zfile.getinfo(realname)
+        modtime=int(time.mktime(info.date_time + (0, 0, 0)))
         return info.file_size, -1, modtime, modtime
 
     def open(self, path, mode='r'):
+        adjusted=pathutil._adjust_user_path(path)
         if mode<>'r':
             raise VFSException, "unsupported file open mode"
-        return RO_StringIO(path, self.__zfile.read(path))
+        if not self.__archive.paths.has_key(adjusted):
+            raise VFSException, "no such file or directory: %s" % path
+        realname=self.__archive.paths[adjusted]
+        if realname!=None:
+            return RO_StringIO(adjusted,
+                               self.__zfile.read(realname))
+        else:
+            raise VFSException, "cannot open directory as file: %s" % path
 
-    def listdir(self, dir):
-        names=self.__zfile.namelist()
-        if not dir.endswith('/'):
-            dir+='/'
-        if dir not in names:
-            raise VFSException, "directory %s not found" % dir        
-        return filter(lambda x, y=dir: x.startswith(y) \
-                      and y!=x \
-                      and '/' not in x[len(y):-1],
-                      names)
+    def listdir(self, path):
+        return self.__archive.listdir(path)
         
     def exists(self, path):
-        return path in self.__zfile.namelist()
+        return self.__archive.exists(path)
 
     def isdir(self, path):
-        # this won't handle archives created on Windows ;=>(
-        return self.exists(path) and \
-               path.endswith('/') and \
-               self.__zfile.getinfo(path).filesize==0
+        adjusted=_adjust_user_path(path)
+        if not self.archive.paths.has_key(adjusted):
+            raise VFSException, "no such file or directory: %s" % path
+        realname=self.__archive.paths[adjusted]
+        if realname==None:
+            return 1
+        else:
+            # on UNIX, I'd hope to get this from file attributes;
+            # Per Boethner's implementation of java.util.zip.ZipEntry
+            # for GNU Classpath only tests the final slash
+            return realname.endswith('/') and \
+                   self.__zfile.getinfo(realname).file_size==0
 
     def isfile(self, path):
+        adjusted=_adjust_user_path(path)
         return self.exists(path) and \
-               not path.endswith('/')
+               not adjusted.endswith('/')
 
 
 ########################################################################
 # $Log$
+# Revision 1.3  2002/01/02 06:39:24  smulloni
+# work on vfs
+#
 # Revision 1.2  2001/12/02 20:57:50  smulloni
 # First fold of work done in September (!) on dev3_2 branch into trunk:
 # vfs and PyDO enhancements (webdav still to come).  Also, small enhancement
